package game.com.anish.screen;

import game.asciiPanel.AsciiPanel;
import java.awt.event.KeyEvent;

public abstract class RestartScreen implements Screen {

    @Override
    public abstract void displayOutput(AsciiPanel terminal);

    @Override
    public Screen respondToUserInput(KeyEvent key) {
        switch (key.getKeyCode()) {
            case KeyEvent.VK_ENTER:
                return new LocalScreen();
            default:
                return this;
        }
    }

}
